--- a/Vite - Dashboard/index.html
+++ b/Vite - Dashboard/index.html
@@ -4,28 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <script type="module" src="main"></script>
   </head>
   <body>
     <main>
       <div class="container">
-          <div class="time">
-            <div class="clock"></div>
+        <div class="time">
+          <div class="clock">
+            <h3 class="center text" id="time"></h3>
+            <h4 class="center text" id="date"></h4>
           </div>
-          <div class="titel">
-            <h1 class="title-text">John Doe Dashboard</h1>
-          </div>
-          <div class="card-wrapper">
-              <div class="card link"></div>
-              <div class="card weather"></div>
-              <div class="card random"></div>
-              <div class="card note"></div>
-          </div>
-          <footer>
-            <div class="background">
-              <div class="bg-button"></div>
+        </div>
+        <div class="title">
+          <h1 class="title-text">John Doe Dashboard</h1>
+        </div>
+        <div class="card-wrapper">
+          <div class="card-divider">
+            <div class="card link">
+              <h2 class="text">Snabblänkar</h2>
             </div>
-          </footer>
+            <div class="card weather">
+              <h2 class="text">Dagens väder</h2>
+            </div>
+          </div>
+          <div class="card-divider">
+            <div class="card random">
+              <h2 class="text">Random</h2>
+            </div>
+            <div class="card note">
+              <h2 class="text">Anteckningar</h2>
+            </div>
+          </div>
+        </div>
+        <footer>
+          <div class="background">
+            <div class="bg-button">
+              <h3 class="center text">[o] Slumpa ny bakgrund</h3>
+            </div>
+          </div>
+        </footer>
       </div>
     </main>
   </body>
