Notebook function + editable Titel

--- a/Vite - Dashboard/index.html
+++ b/Vite - Dashboard/index.html
@@ -17,12 +17,16 @@
           </div>
         </div>
         <div class="title">
-          <h1 class="title-text">John Doe Dashboard</h1>
+          <h1 class="title-text" id="dashboardTitle" contenteditable="true">John Doe Dashboard</h1>
         </div>
         <div class="card-wrapper">
           <div class="card-divider">
             <div class="card link">
               <h2 class="text">Snabblänkar</h2>
+              <div class="saved-link">
+                <a href=""></a>
+                <button class="remove-btn">x</button>
+              </div>
             </div>
             <div class="card weather">
               <h2 class="text">Dagens väder</h2>
@@ -34,6 +38,9 @@
             </div>
             <div class="card note">
               <h2 class="text">Anteckningar</h2>
+              <div class="noteboard">
+                <div contenteditable="true" class="noteboard-text"></div>
+              </div>
             </div>
           </div>
         </div>
