unsplash api + css restructure + env file for api usage (gitignore)

--- a/Vite - Dashboard/index.html
+++ b/Vite - Dashboard/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="main.js"></script>
     <script src="links.js"></script>
+    <script type="module" src="unsplash.js"></script>
   </head>
   <body>
     <main>
@@ -58,11 +59,10 @@
             </div>
           </div>
         </div>
-        <svg></svg>
         <footer>
           <div class="background">
             <div class="bg-button">
-              <h3 class="center text">[o] Slumpa ny bakgrund</h3>
+              <h3 class="center text">Slumpa ny bakgrund</h3>
             </div>
           </div>
         </footer>
