--- a/Vite - Dashboard/index.html
+++ b/Vite - Dashboard/index.html
@@ -61,8 +61,8 @@
         </div>
         <footer>
           <div class="background">
-            <div class="bg-button">
-              <h3 class="center text">Slumpa ny bakgrund</h3>
+            <div class="prompt-button">
+              <h4 class="center text">Sök ny bakgrund</h4>
             </div>
           </div>
         </footer>
