weather card finished?

--- a/Vite - Dashboard/index.html
+++ b/Vite - Dashboard/index.html
@@ -43,7 +43,11 @@
             <div class="card weather">
               <div id="tempStats"></div>
               <h2 class="text weather-title">Dagens väder</h2>
-              <div id="weatherInfo" class="weather-info"></div>
+              <div id="weatherInfo" class="weather-info">
+                <div class="weather-icon">
+                  <img  id="weather-svg" src="" alt="">
+                </div>
+              </div>
               <div id="getWeatherButton" class="weather-btn center text">
                 <h4>Sök stad</h4>
               </div>
