weather auto search (navigator.geolocation)

--- a/Vite - Dashboard/index.html
+++ b/Vite - Dashboard/index.html
@@ -27,7 +27,7 @@
             contenteditable="true"
             spellcheck="false"
           >
-            John Doe Dashboard
+            Dashboard
           </h1>
         </div>
         <div class="card-wrapper">
